--- a/ul/GoTo.html
+++ b/ul/GoTo.html
@@ -4,7 +4,7 @@
             let params = new URLSearchParams(location.search);
             if (params.has('goto')) {
                 let goto = params.get('goto');
-                location.assign('./' + goto + '/')
+                location.assign('./' + goto)
             } else {
                 location.assign('./')
             }
